--- a/css/components/_icons.scss
+++ b/css/components/_icons.scss
@@ -1347,3 +1347,194 @@ $ci-tiktok: '\e9da';
     content: $ci-tiktok; 
   }
 }
+
+.ci-pt-basket:before {
+  content: "\e9db";
+}
+.ci-pt-bottom-2:before {
+  content: "\e9dc";
+}
+.ci-pt-call-2:before {
+  content: "\e9dd";
+}
+.ci-pt-check:before {
+  content: "\e9de";
+}
+.ci-pt-email-solid:before {
+  content: "\e9df";
+}
+.ci-pt-home:before {
+  content: "\e9e0";
+}
+.ci-pt-home-solid:before {
+  content: "\e9e1";
+}
+.ci-pt-left-circle:before {
+  content: "\e9e3";
+}
+.ci-pt-left-2:before {
+  content: "\e9e4";
+}
+.ci-pt-messenger:before {
+  content: "\e9e5";
+}
+.ci-pt-phone-solid:before {
+  content: "\e9e6";
+}
+.ci-pt-poin-solid:before {
+  content: "\e9e7";
+}
+.ci-pt-quota:before {
+  content: "\e9e8";
+}
+.ci-pt-right_circle:before {
+  content: "\e9ea";
+}
+.ci-pt-right-2:before {
+  content: "\e9eb";
+}
+.ci-pt-zalo:before {
+  content: "\e9ec";
+}
+.ci-pt-award .path1:before {
+  content: "\e9ed";
+  color: rgb(89, 74, 78);
+}
+.ci-pt-award .path2:before {
+  content: "\e9ee";
+  margin-left: -1.0576171875em;
+  color: rgb(89, 74, 78);
+}
+.ci-pt-award .path3:before {
+  content: "\e9ef";
+  margin-left: -1.0576171875em;
+  color: rgb(89, 74, 78);
+}
+.ci-pt-award .path4:before {
+  content: "\e9f0";
+  margin-left: -1.0576171875em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-award .path5:before {
+  content: "\e9f1";
+  margin-left: -1.0576171875em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-award .path6:before {
+  content: "\e9f2";
+  margin-left: -1.0576171875em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-award .path7:before {
+  content: "\e9f3";
+  margin-left: -1.0576171875em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-award .path8:before {
+  content: "\e9f4";
+  margin-left: -1.0576171875em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-idea .path1:before {
+  content: "\e9f5";
+  color: rgb(89, 74, 78);
+}
+.ci-pt-idea .path2:before {
+  content: "\e9f6";
+  margin-left: -0.9521484375em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-idea .path3:before {
+  content: "\e9f7";
+  margin-left: -0.9521484375em;
+  color: rgb(89, 74, 78);
+}
+.ci-pt-idea .path4:before {
+  content: "\e9f8";
+  margin-left: -0.9521484375em;
+  color: rgb(89, 74, 78);
+}
+.ci-pt-idea .path5:before {
+  content: "\e9f9";
+  margin-left: -0.9521484375em;
+  color: rgb(89, 74, 78);
+}
+.ci-pt-idea .path6:before {
+  content: "\e9fa";
+  margin-left: -0.9521484375em;
+  color: rgb(89, 74, 78);
+}
+.ci-pt-idea .path7:before {
+  content: "\e9fb";
+  margin-left: -0.9521484375em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-idea .path8:before {
+  content: "\e9fc";
+  margin-left: -0.9521484375em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-idea .path9:before {
+  content: "\e9fd";
+  margin-left: -0.9521484375em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-idea .path10:before {
+  content: "\e9fe";
+  margin-left: -0.9521484375em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-idea .path11:before {
+  content: "\e9ff";
+  margin-left: -0.9521484375em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-idea .path12:before {
+  content: "\ea00";
+  margin-left: -0.9521484375em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-idea .path13:before {
+  content: "\ea01";
+  margin-left: -0.9521484375em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-rocket .path1:before {
+  content: "\ea02";
+  color: rgb(240, 191, 11);
+}
+.ci-pt-rocket .path2:before {
+  content: "\ea03";
+  margin-left: -1em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-rocket .path3:before {
+  content: "\ea04";
+  margin-left: -1em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-rocket .path4:before {
+  content: "\ea05";
+  margin-left: -1em;
+  color: rgb(89, 74, 78);
+}
+.ci-pt-rocket .path5:before {
+  content: "\ea06";
+  margin-left: -1em;
+  color: rgb(240, 191, 11);
+}
+.ci-pt-rocket .path6:before {
+  content: "\ea07";
+  margin-left: -1em;
+  color: rgb(89, 74, 78);
+}
+.ci-pt-rocket .path7:before {
+  content: "\ea08";
+  margin-left: -1em;
+  color: rgb(89, 74, 78);
+}
+.ci-pt-rocket .path8:before {
+  content: "\ea09";
+  margin-left: -1em;
+  color: rgb(89, 74, 78);
+}
